Added check for threading capability

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set( CMAKE_CXX_STANDARD 17 )
 
 # Includes
 enable_testing()
+set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package( Threads REQUIRED )
 find_package( GTest REQUIRED )
 include_directories( ${GTEST_INCLUDE_DIRS} )
